# arjunor-alpha

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: cmd.h  comm.cpp  comm.h  eval.cpp  eval.cpp.final  eval.h  notes.md  resp.cpp  resp.h  response.cpp  response.h  server.cpp  store.cpp  store.h
tests/: test_resp.cpp  test_response.cpp
